rebrand-navigation: css changes for navigation mobile and logo, fixed background color bug, creates test js for mouse over menu links

--- a/content-types/current/rebrand-navigation/css/main.css
+++ b/content-types/current/rebrand-navigation/css/main.css
@@ -174,6 +174,10 @@
   display: none;
 }
 
+.header-nav__mobile--open {
+  background-color: unset !important;
+}
+
 /* TEMPORARY TEST */
 
 .test-content {
